--- a/hotdoc/formatters/html/templates/page.html
+++ b/hotdoc/formatters/html/templates/page.html
@@ -1,32 +1,41 @@
-@require(stylesheet)
+@require(page, toc_sections, symbols_details)
+@extends('base_page.html')
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta content='text/html; charset=UTF-8' />
-	<link rel="stylesheet" href=@stylesheet type="text/css" />
-</head>
+@def header_links():
 
-<table class="navigation" id="top" summary="Navigation header" width="100%" cellpadding="2" cellspacing="5">
-	<tbody>
-	<tr valign="middle">
-		<td class="shortcuts" align="left" width=100%>
-			<a class="shortcut" href="#">Top</a>
-
-			@def header_links():
-			@end
-			@header_links()
-		</td>
-		<td>
-			<a href="index.html" accesskey="h">
-				<img border="0" width="16" alt="Home" src="home.png"></img>
-			</a>
-		</td>
-	</tr>
-	</tbody>
-</table>
+@for toc_section in toc_sections:
+<span id="nav_@toc_section.name">
+	<span class="dim">|</span>
+	<a href="#@toc_section.id_">@toc_section.name</a>
+</span>
+@end
 
 @def content():
+
+<div class="refentry">
+	@for toc_section in toc_sections:
+	<div class="refsect1">
+		<a name=@toc_section.id_></a>
+		@toc_section.summary
+	</div>
+	@end
+
+	@if page.formatted_contents:
+	@page.formatted_contents
+	@end
+
+	@for symbols_detail in symbols_details:
+	<div class="refsect1">
+		<a name="@symbols_detail.name"></a>
+		<h2>@symbols_detail.name</h2>
+		@for i, description in enumerate(symbols_detail.descriptions):
+
+		@if i != 0:
+		<hr></hr>
+		@end
+		@description
+		@end
+	</div>
+	@end
+</div>
 @end
-@content()
