--- a/hotdoc/formatters/html/templates/property.html
+++ b/hotdoc/formatters/html/templates/property.html
@@ -1,4 +1,4 @@
-@require(prototype, property)
+@require(prototype, property, extra)
 
 <div class="refsect2">
 	<a name=@property.link.id_></a>
@@ -8,20 +8,14 @@
 	@prototype
 	@property.formatted_doc
 
-@if property.flags:
-<p>Flags:\
-@for i, flag in enumerate (property.flags):
+	@if extra:
+	\
+	@for name, ex in extra.iteritems():
+	<p>
+		@name :\
+		@ex
+	</p>
+	@end
+	@end
 
-@if i != 0:
-/\
-@end
-
-@if flag.link:
-<a href="@flag.link">@flag.nick</a>
-@else:
-@flag.nick
-@end
-@end
-@end
-</p>
 </div>
