--- a/hotdoc/formatters/html/templates/enum.html
+++ b/hotdoc/formatters/html/templates/enum.html
@@ -2,7 +2,7 @@
 <div class="refsect2">
 	<a name=@enum.link.id_></a>
 	<h3>
-		enum @enum.link.title
+		@enum.link.title
 	</h3>
 	@if enum.formatted_doc:
 	@enum.formatted_doc
