Add a DBus extension, trivial with new design
150 LOC :)

--- a/hotdoc/formatters/html/templates/callable_prototype.html
+++ b/hotdoc/formatters/html/templates/callable_prototype.html
@@ -1,6 +1,8 @@
 @require(callable, param_offset, is_pointer)
 <pre class="programlisting">
+@if callable.return_value:
 @callable.return_value
+@end
 @if is_pointer:
 (*\
 @end
