--- a/hotdoc/formatters/html/templates/page.html
+++ b/hotdoc/formatters/html/templates/page.html
@@ -26,8 +26,11 @@
 
 	@for symbols_detail in symbols_details:
 	<div class="refsect1">
+		@if symbols_detail.name:
 		<a name="@symbols_detail.name"></a>
 		<h2>@symbols_detail.name</h2>
+		@end
+		\
 		@for i, description in enumerate(symbols_detail.descriptions):
 
 		@if i != 0:
