--- a/hotdoc/formatters/html/templates/callable.html
+++ b/hotdoc/formatters/html/templates/callable.html
@@ -9,20 +9,18 @@
 	@if parameters:
 		<div class="refsect3">
 			<h4>Parameters</h4>
-			<div class="informaltable">
-				<table width="100%" border="0">
-					<colgroup>
-						<col class="parameters_name" width="150px" />
-						<col class="parameters_description" />
-						<col class="parameters_annotations" width="200px"/>
-					</colgroup>
-					<tbody>
-						@for parameter in parameters:
-							@parameter
-						@end
-					</tbody>
-				</table>
-			</div>
+			<table style="width:100%">
+				<colgroup>
+					<col class="parameters_name" style="width:20%" />
+					<col class="parameters_description" style="width:60%" />
+					<col class="parameters_annotations" style="width:20%" />
+				</colgroup>
+				<tbody>
+					@for parameter in parameters:
+						@parameter
+					@end
+				</tbody>
+			</table>
 		</div>
 	@end
 
