Add syntax highlighting in code examples
We use prismjs[0] to do the syntax highlighting

And make sure to hide examples from a language we are not formatting for
in the gi extension

[0] http://prismjs.com/

--- a/hotdoc/formatters/html/style.css
+++ b/hotdoc/formatters/html/style.css
@@ -10,6 +10,11 @@ body
   border: solid 1px rgb(238, 238, 236);
   padding: 0.5em;
 }
+
+[class*='language-'] {
+    display: none;
+}
+
 .programlisting
 {
   /* tango:sky blue 0/1 */
