--- a/hotdoc/formatters/html/templates/base_page.html
+++ b/hotdoc/formatters/html/templates/base_page.html
@@ -1,5 +1,4 @@
-@require(stylesheets)
-@require(scripts)
+@require(stylesheets, scripts, assets_path)
 
 <!DOCTYPE html>
 <html lang="en">
@@ -27,7 +26,7 @@
 		</td>
 		<td>
 			<a href="index.html" accesskey="h">
-				<img border="0" width="16" alt="Home" src="home.png"></img>
+				<img border="0" width="16" alt="Home" src="@assets_path/home.png"></img>
 			</a>
 		</td>
 	</tr>
