--- a/hotdoc/formatters/html/templates/hierarchy.html
+++ b/hotdoc/formatters/html/templates/hierarchy.html
@@ -14,14 +14,14 @@
 @end
 @parent
 @end
-@for j in range ((i + 1) * 4):
+@for j in range ((len(hierarchy) + 1) * 4):
  \
 @end
 @end
 <span class="lineart">╰──</span>@klass.link.title
 @for child in children:
 \
-@for j in range ((i + 2) * 4):
+@for j in range ((len(hierarchy) + 2) * 4):
  \
 @end
 <span class="lineart">╰──</span>\
