Remove stray img tag

--- a/hotdoc/formatters/html/templates/base_page.html
+++ b/hotdoc/formatters/html/templates/base_page.html
@@ -26,7 +26,7 @@
 		</td>
 		<td>
 			<a href="index.html" accesskey="h">
-				<img border="0" width="16" alt="Home" src="@assets_path/home.png"></img>
+				<img border="0" width="16" alt="Home" src="@assets_path/home.png">
 			</a>
 		</td>
 	</tr>
