Fix some more w3c validator errors.

--- a/hotdoc/formatters/html/templates/base_page.html
+++ b/hotdoc/formatters/html/templates/base_page.html
@@ -4,13 +4,15 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta content='text/html; charset=UTF-8' />
+
+	<title>Made with HotDoc</title>
+
 	@for stylesheet in stylesheets:
 	<link rel="stylesheet" href=@stylesheet type="text/css" />
 	@end
 
 	@for script in scripts:
-    <script src=@script></script>
+    	<script src=@script></script>
 	@end
 </head>
 
