--- a/hotdoc/formatters/html/templates/base_symbol.html
+++ b/hotdoc/formatters/html/templates/base_symbol.html
@@ -13,7 +13,7 @@
 				@header()
 			</td>
 			<td>
-				<a href="http://127.0.0.1:5000/editor/@symbol.link.id_">
+				<a href="http://dev.example.com:5055/editor/@symbol.link.id_">
 					<p style="text-align:right">
 						Edit
 					</p>
