--- a/hotdoc/formatters/html/templates/enum_member.html
+++ b/hotdoc/formatters/html/templates/enum_member.html
@@ -6,7 +6,7 @@
 		@link.title
 		</p>
 	</td>
-	<td class="enum_member_description"><p>@detail</p></td>
+	<td class="enum_member_description">@detail</td>
 	<td class="enum_member_value">
 		<span class="value">Value: @value</span>
 	<td>
