--- a/hotdoc/formatters/html/templates/parameter_detail.html
+++ b/hotdoc/formatters/html/templates/parameter_detail.html
@@ -7,7 +7,7 @@
 		</p>
 	</td>
 	@end
-	<td class="parameter_description"><p>@detail</p></td>
+	<td class="parameter_description">@detail</td>
 @for name, ex in extra.iteritems():
 <td style="text-align: left;">
 @ex
