--- a/hotdoc/formatters/html/templates/hierarchy.html
+++ b/hotdoc/formatters/html/templates/hierarchy.html
@@ -14,19 +14,19 @@
 @end
 @parent
 @end
-@for j in range ((len(hierarchy) + 1) * 4):
+@for j in range ((len(hierarchy)) * 4):
  \
 @end
 @end
 <span class="lineart">╰──</span>@klass.link.title
 @for child in children:
 \
-@for j in range ((len(hierarchy) + 2) * 4):
+@for j in range ((len(hierarchy) + 1) * 4):
  \
 @end
 <span class="lineart">╰──</span>\
 @child
 @end
-
+</pre>
 
 </div>
