"Fix" more w3c validator errors.
This savagely breaks the layout though, about to
reimplement tables correctly.

--- a/hotdoc/formatters/html/templates/base_page.html
+++ b/hotdoc/formatters/html/templates/base_page.html
@@ -16,10 +16,10 @@
 	@end
 </head>
 
-<table class="navigation" id="top" summary="Navigation header" width="100%" cellpadding="2" cellspacing="5">
+<table class="navigation" id="top">
 	<tbody>
-	<tr valign="middle">
-		<td class="shortcuts" align="left" width=100%>
+	<tr>
+		<td class="shortcuts">
 			<a class="shortcut" href="#">Top</a>
 
 			@def header_links():
