--- a/hotdoc/formatters/html/templates/callable_summary.html
+++ b/hotdoc/formatters/html/templates/callable_summary.html
@@ -5,7 +5,7 @@
 	    <span>@return_value</span>
     </td>
     @end
-    <td class="function_name", style="text-align: left;">
+    <td class="function_name" style="text-align: left;">
 	    <span>\
 @if is_pointer:
 <span class="c_punctuation">(*</span>\
