--- a/hotdoc/formatters/html/templates/summary.html
+++ b/hotdoc/formatters/html/templates/summary.html
@@ -5,7 +5,8 @@
 <div class="informaltable">
 	<table>
 		<colgroup>
-			<col width="150px"/>
+			<col/>
+			<col/>
 		</colgroup>
 		@for summary in summaries:
 		@summary
