--- a/hotdoc/formatters/html/templates/member_list.html
+++ b/hotdoc/formatters/html/templates/member_list.html
@@ -4,11 +4,11 @@
 <div class="refsect3">
 	<h4>@member_designation</h4>
 	<div class="informaltable">
-		<table width="100%" border="0">
+		<table>
 			<colgroup>
-				<col class="members_name" width="300px" />
+				<col class="members_name"/>
 				<col class="members_description" />
-				<col class="members_value" width="200px"/>
+				<col class="members_value"/>
 			</colgroup>
 			<tbody>
 			@for member in members:
