Simplify table of contents to one big table.
Quite ugly for now to be fair.

--- a/hotdoc/formatters/html/templates/class_summary.html
+++ b/hotdoc/formatters/html/templates/class_summary.html
@@ -1,8 +1,12 @@
 @require(klass, short_description)
 <tr>
+	<td class="datatype_keyword">
+		<span>class</span>
+	</td>
+	<td class="function_name">
+		<span>@klass.link.title</span>
+	</td>
 	<td>
-		<a name="@klass.link.id_"></a>
-		<h1>@klass.link.title</h1>
 		@if short_description:
 		@short_description
 		@end
