--- a/hotdoc/formatters/html/templates/page.html
+++ b/hotdoc/formatters/html/templates/page.html
@@ -1,28 +1,19 @@
-@require(page, toc_sections, symbols_details)
+@require(page, toc, symbols_details)
 @extends('base_page.html')
 
 @def header_links():
 
-@for toc_section in toc_sections:
-<span id="nav_@toc_section.id_">
-	<span class="dim">|</span>
-	<a href="#@toc_section.id_">@toc_section.name</a>
-</span>
 @end
 
 @def content():
 
 <div class="refentry">
-	@for toc_section in toc_sections:
-	<div class="refsect1">
-		<a name=@toc_section.id_></a>
-		@toc_section.summary
-	</div>
-	@end
 
 	@if page.formatted_contents:
 	@page.formatted_contents
 	@end
+
+	@toc
 
 	@for symbols_detail in symbols_details:
 	<div class="refsect1">
