Remove all notions of style from the formatter.

--- a/hotdoc/formatters/html/templates/base_symbol.html
+++ b/hotdoc/formatters/html/templates/base_symbol.html
@@ -2,7 +2,7 @@
 
 <div class="refsect2">
 	<a name=@symbol.link.id_></a>
-	<table style="width:100%">
+	<table>
 		<colgroup>
 			<col/>
 			<col/>
@@ -15,7 +15,7 @@
 				</td>
 				<td>
 					<a href="http://dev.example.com:5055/editor/@symbol.link.id_">
-						<p style="text-align:right">
+						<p>
 							Edit
 						</p>
 					</a>
