--- a/hotdoc/formatters/html/templates/callable_summary.html
+++ b/hotdoc/formatters/html/templates/callable_summary.html
@@ -5,7 +5,7 @@
 	    <span>@return_value</span>
     </td>
     @end
-    <td class="function_name" style="text-align: left;">
+    <td class="function_name">
 	    <span>\
 @if is_pointer:
 <span class="c_punctuation">(*</span>\
@@ -21,7 +21,7 @@
 </span>
 </td>
 @if False:
-<td class="signal_flags" style="text-align:right;">
+<td class="signal_flags">
 @for flag in flags:
 
 @if flag.link:
