--- a/hotdoc/formatters/html/templates/multi_return_value.html
+++ b/hotdoc/formatters/html/templates/multi_return_value.html
@@ -5,11 +5,11 @@
 	@else:
 		<h4>Returns a tuple made of</h4>
 	@end
-	<table style="width:100%; vertical-align: top;">
+	<table>
 		<colgroup>
-			<col class="parameters_name" style="width:20%;" />
-			<col class="parameters_description" style="width:60%;" />
-			<col class="parameters_type" style="width:20%;"/>
+			<col class="parameters_name"/>
+			<col class="parameters_description"/>
+			<col class="parameters_type"/>
 		</colgroup>
 		<tbody>
 			@for value in return_values:
