--- a/hotdoc/formatters/html/templates/callable.html
+++ b/hotdoc/formatters/html/templates/callable.html
@@ -12,11 +12,11 @@
 @if parameters:
 	<div class="refsect3">
 		<h4>Parameters</h4>
-		<table style="width:100%">
+		<table>
 			<colgroup>
-				<col class="parameters_name" style="width:20%" />
-				<col class="parameters_description" style="width:60%" />
-				<col class="parameters_annotations" style="width:20%" />
+				<col class="parameters_name"/>
+				<col class="parameters_description"/>
+				<col class="parameters_annotations"/>
 			</colgroup>
 			<tbody>
 				@for parameter in parameters:
