Start classifying html output more meaningfully.

--- a/hotdoc/formatters/html/templates/alias.html
+++ b/hotdoc/formatters/html/templates/alias.html
@@ -1,10 +1,10 @@
 @require(alias, aliased_type)
-<div class="refsect2">
+<div class="alias_details">
 	<a name=@alias.link.id_></a>
-	<h3 class="alias">
+	<h3>
 		@alias.link.title
 	</h3>
-	<pre class="programlisting">
+	<pre>
 typedef @aliased_type @alias.link.title\
 	</pre>
 	@alias.formatted_doc
