--- a/hotdoc/formatters/html/templates/base_symbol.html
+++ b/hotdoc/formatters/html/templates/base_symbol.html
@@ -1,6 +1,6 @@
 @require(symbol)
 
-<div class="refsect2">
+<div class="base_symbol_container">
 	<a name=@symbol.link.id_></a>
 	<table>
 		<colgroup>
