--- a/hotdoc/formatters/html/templates/callable_prototype.html
+++ b/hotdoc/formatters/html/templates/callable_prototype.html
@@ -1,5 +1,5 @@
 @require(callable, param_offset, is_pointer)
-<pre class="programlisting">
+<pre class="prototype">
 @if callable.return_value:
 @callable.return_value
 @end
