--- a/hotdoc/formatters/html/templates/constant.html
+++ b/hotdoc/formatters/html/templates/constant.html
@@ -1,5 +1,5 @@
 @require(definition, constant)
-<div class="refsect2">
+<div class="constant_details">
 	<a name=@constant.link.id_></a>
 	<h3 class="constant">
 		@constant.link.title
