--- a/hotdoc/formatters/html/templates/enum.html
+++ b/hotdoc/formatters/html/templates/enum.html
@@ -1,5 +1,5 @@
 @require(enum, members_list)
-<div class="refsect2">
+<div class="enum_details">
 	<a name=@enum.link.id_></a>
 	<h3>
 		@enum.link.title
