--- a/hotdoc/formatters/html/templates/enum_member.html
+++ b/hotdoc/formatters/html/templates/enum_member.html
@@ -1,13 +1,13 @@
 @require(link, detail, value)
 <tr>
-	<td class="enum_member_name">
+	<td>
 		<p>
 		<a name="@link.id_"></a>
 		@link.title
 		</p>
 	</td>
-	<td class="enum_member_description">@detail</td>
-	<td class="enum_member_value">
+	<td>@detail</td>
+	<td>
 		<span class="value">Value: @value</span>
 	<td>
 </tr>
