--- a/hotdoc/formatters/html/templates/link.html
+++ b/hotdoc/formatters/html/templates/link.html
@@ -1,2 +1,2 @@
 @require(link, link_title)
-<a class="link" title=@link_title href=@link>@link_title</a>\
+<a title=@link_title href=@link>@link_title</a>\
