--- a/hotdoc/formatters/html/templates/macro_summary.html
+++ b/hotdoc/formatters/html/templates/macro_summary.html
@@ -1,12 +1,12 @@
 @require(macro, is_callable)
 <tr>
-    <td class="property_type">
+    <td>
 	    <span>#define</span>
     </td>
-    <td class="property_name">
+    <td>
 <span>@macro\
 @if is_callable:
-<span class="c_punctuation">()</span>\
+<span>()</span>\
 @end
 </span>
     </td>
