--- a/hotdoc/formatters/html/templates/member_list.html
+++ b/hotdoc/formatters/html/templates/member_list.html
@@ -1,14 +1,14 @@
 @require(members, member_designation)
 
 @if members:
-<div class="refsect3">
+<div class="member_details">
 	<h4>@member_designation</h4>
-	<div class="informaltable">
+	<div>
 		<table>
 			<colgroup>
-				<col class="members_name"/>
-				<col class="members_description" />
-				<col class="members_value"/>
+				<col/>
+				<col/>
+				<col/>
 			</colgroup>
 			<tbody>
 			@for member in members:
