--- a/hotdoc/formatters/html/templates/property.html
+++ b/hotdoc/formatters/html/templates/property.html
@@ -1,9 +1,9 @@
 @require(prototype, property, extra)
 
-<div class="refsect2">
+<div class="property_container">
 	<a name=@property.link.id_></a>
 	<h3 class="method">
-		<span class="entry">The <code>“@property.link.title”</code> property</span>
+		<span>The <code>“@property.link.title”</code> property</span>
 	</h3>
 	@prototype
 	@property.formatted_doc
