--- a/hotdoc/formatters/html/templates/return_value.html
+++ b/hotdoc/formatters/html/templates/return_value.html
@@ -1,5 +1,5 @@
 @require(return_value)
-<div class="refsect3">
+<div class="return_value_details">
 	<h4>Returns</h4>
 	@return_value.formatted_doc
 </div>
