--- a/hotdoc/formatters/html/templates/struct.html
+++ b/hotdoc/formatters/html/templates/struct.html
@@ -1,5 +1,5 @@
 @require(struct, raw_code, members_list)
-<div class="refsect2">
+<div class="struct_container">
 	<a name=@struct.link.id_></a>
 	<h3>
 		struct @struct.link.title
