--- a/hotdoc/formatters/html/templates/callable.html
+++ b/hotdoc/formatters/html/templates/callable.html
@@ -2,21 +2,21 @@
 @extends('base_symbol.html')
 
 @def header():
-<h3 class="method">
-	<span class="entry">The <code>“@symbol.link.title”</code> @callable_type</span>
+<h3>
+	<span>The <code>“@symbol.link.title”</code> @callable_type</span>
 </h3>
 @end
 @def content():
 @prototype
 @symbol.formatted_doc
 @if parameters:
-	<div class="refsect3">
+	<div class="parameter_container">
 		<h4>Parameters</h4>
 		<table>
 			<colgroup>
-				<col class="parameters_name"/>
-				<col class="parameters_description"/>
-				<col class="parameters_annotations"/>
+				<col class="parameter_name"/>
+				<col class="parameter_description"/>
+				<col class="parameter_annotations"/>
 			</colgroup>
 			<tbody>
 				@for parameter in parameters:
