--- a/hotdoc/formatters/html/templates/hierarchy.html
+++ b/hotdoc/formatters/html/templates/hierarchy.html
@@ -1,7 +1,7 @@
 @require(hierarchy, klass, children)
-<div class="refsect1">
+<div class="hierarchy_details">
 	<h2>Object Hierarchy</h2>
-<pre class="screen">
+<pre>
 @if hierarchy:
 @for i, parent in enumerate(hierarchy):
 \
