--- a/hotdoc/formatters/html/templates/property_prototype.html
+++ b/hotdoc/formatters/html/templates/property_prototype.html
@@ -1,4 +1,4 @@
 @require(property_name, property_type)
-<pre class="programlisting">
+<pre class="property_signature">
 “@property_name” <span class="type">@property_type</span>
 </pre>
