--- a/hotdoc/formatters/html/templates/summary.html
+++ b/hotdoc/formatters/html/templates/summary.html
@@ -1,11 +1,6 @@
 @require(toc_sections)
-<div class="informaltable">
-	<table>
-		<colgroup>
-			<col/>
-			<col/>
-			<col/>
-		</colgroup>
+<div>
+	<table class="symbols_toc">
 		@for toc_section in toc_sections:
 			<th colspan=3>@toc_section.name</th>
 			@for summary in toc_section.summaries:
