Port all summaries to a base summary

--- a/hotdoc/formatters/html/templates/alias_summary.html
+++ b/hotdoc/formatters/html/templates/alias_summary.html
@@ -1,9 +1,9 @@
 @require(alias)
-<tr>
-    <td>
-	    <span>typedef</span>
-    </td>
-    <td>
-	    <span>@alias</span>
-    </td>
-</tr>
+@extends('base_symbol_summary.html')
+
+@def type():
+<span>typedef</span>
+@end
+@def name():
+<span>@alias</span>
+@end
