--- a/hotdoc/formatters/html/templates/enum_summary.html
+++ b/hotdoc/formatters/html/templates/enum_summary.html
@@ -1,9 +1,9 @@
 @require(enum)
-<tr>
-    <td>
-	    <span>enum</span>
-    </td>
-    <td>
-	    <span>@enum</span>
-    </td>
-</tr>
+@extends('base_symbol_summary.html')
+
+@def type():
+<span>enum</span>
+@end
+@def name():
+<span>@enum</span>
+@end
