--- a/hotdoc/formatters/html/templates/class.html
+++ b/hotdoc/formatters/html/templates/class.html
@@ -1,15 +1,24 @@
 @require(klass, hierarchy)
+@extends('base_symbol.html')
 
+@def header():
+<h3>
+	@klass.link.title
+</h3>
+@end
+
+@def content():
+\
 @if hierarchy:
 <div class="hierarchy_container">
-	<a name="hierarchy"></a>
 	@hierarchy
 </div>
 @end
 
 @if klass.formatted_doc:
 <div class="class_details">
-	<h2>Instance description</h2>
 	@klass.formatted_doc
 </div>
+@end
+\
 @end
