--- a/hotdoc/formatters/html/templates/enum.html
+++ b/hotdoc/formatters/html/templates/enum.html
@@ -1,11 +1,15 @@
 @require(enum, members_list)
-<div class="enum_details">
-	<a name=@enum.link.id_></a>
-	<h3>
-		@enum.link.title
-	</h3>
-	@if enum.formatted_doc:
-	@enum.formatted_doc
-	@end
-	@members_list
-</div>
+@extends('base_symbol.html')
+
+@def header():
+<h3>
+	@enum.link.title
+</h3>
+@end
+@def content():
+\
+@if enum.formatted_doc:
+@enum.formatted_doc
+@end
+@members_list
+@end
