--- a/hotdoc/formatters/html/templates/member_list.html
+++ b/hotdoc/formatters/html/templates/member_list.html
@@ -3,7 +3,7 @@
 @if members:
 <div class="member_details">
 	<h4>@member_designation</h4>
-	<div>
+	<div class="member_container">
 		<table>
 			<colgroup>
 				<col/>
