templates: add link in class summary.

--- a/hotdoc/formatters/html/templates/class_summary.html
+++ b/hotdoc/formatters/html/templates/class_summary.html
@@ -5,5 +5,7 @@
 <span>class</span>
 @end
 @def name():
-<span>@klass.link.title</span>
+<a href="@klass.link.get_link()">
+	<span>@klass.link.title</span>
+</a>
 @end
