gi_html_formatter: port compound_summary

--- a/hotdoc/extensions/templates/python_compound_summary.html
+++ b/hotdoc/extensions/templates/python_compound_summary.html
@@ -1,6 +1,6 @@
 @require(compound)
-<tr>
-    <td class="function_name">
-	    <span>@compound</span>
-    </td>
-</tr>
+@extends('base_symbol_summary.html')
+
+@def name():
+<span>@compound</span>
+@end
