--- a/hotdoc/formatters/html/templates/base_symbol.html
+++ b/hotdoc/formatters/html/templates/base_symbol.html
@@ -12,8 +12,7 @@ tags.pop('returns', None)
 @for tag in tags.values():
 @tag.name.lower():@tag.description;\
 @end
-">
-	<a name=@symbol.link.id_></a>
+" id="@symbol.link.id_">
 	<ul class="base_symbol_header">
 		<li class="base_symbol_name">
 		@def header():
