--- a/hotdoc/formatters/html/templates/callable_prototype.html
+++ b/hotdoc/formatters/html/templates/callable_prototype.html
@@ -1,4 +1,4 @@
-@require(return_value, name, param_offset, is_pointer)
+@require(return_value, name, parameters, param_offset, is_pointer)
 <pre class="prototype">
 @if return_value:
 @return_value
