Try our best to set a significant title on produced pages.

--- a/hotdoc/formatters/html/templates/base_page.html
+++ b/hotdoc/formatters/html/templates/base_page.html
@@ -1,11 +1,11 @@
-@require(assets_path)
+@require(page, assets_path)
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-	<title>Made with HotDoc</title>
+	<title>@page.get_title()</title>
 </head>
 
 <div class="page_container">
