--- a/hotdoc/formatters/html/templates/page.html
+++ b/hotdoc/formatters/html/templates/page.html
@@ -11,7 +11,8 @@
 
 @for symbols_detail in symbols_details:
 @if symbols_detail.name:
-<h2 class="symbol_section" id="@symbols_detail.name">@symbols_detail.name</h2>
+@(html_id = '_'.join(symbols_detail.name.split()))
+<h2 class="symbol_section" id="@html_id">@symbols_detail.name</h2>
 @end
 \
 @for i, description in enumerate(symbols_detail.descriptions):
