--- a/hotdoc/formatters/html/templates/base_page.html
+++ b/hotdoc/formatters/html/templates/base_page.html
@@ -1,16 +1,20 @@
-@require(page, assets_path)
+@require(page, scripts, assets_path)
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-	<title>@page.get_title()</title>
+<title>@page.get_title()</title>
+
+@for script in scripts:
+<script src="@assets_path/js/@script"></script>
+@end
 </head>
 
 <div class="page_container">
-@def content():
-@end
-@content()
+	@def content():
+	@end
+	@content()
 </div>
 </html>
